<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1ce67a"
    android:padding="10dp"
    tools:context="com.example.rifat.myweatherapp.MainActivity">

    <TextView
        android:id="@+id/cityNametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_Name"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/image_viewId"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="100dp"
            android:layout_height="80dp" />
        <TextView
            android:id="@+id/celcious_degreeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12 deg"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="30dp"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/windTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/cloudTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloud"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/pressureTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/humidityTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/sunriseTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/sunsetTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/updateTxt"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update"
        android:layout_gravity="center"
        android:textSize="20dp"/>







</LinearLayout>
